--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="">WeStudio</a>
+        <a href="">WebStudio</a>
         <ul>
           <a href="">Студія</a>
           <a href="">Портфоліо</a>
