--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
         <p>+38 096 111 11 11</p>
       </header>
       <main>
-        <div><a href="">Усі</a>
-            <a href="">Веб-сайти</a>
-            <a href="">Додатки</a>
-            <a href="">Дизайн</a>
-            <a href="">Маркетинг</a>
+        <div>
+            <button>Усі</button>
+            <button>Веб-сайти</button>
+            <button>Додатки</button>
+            <button>Дизайн</button>
+            <button>Маркетинг</button>
         </div>
         <div>
             <ul>
