--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <header>
-        <a href="">WebStudio</a>
+        <a href="">Web</a>
+        <a href="">Studio</a>
         <ul>
           <a href="">Студія</a>
           <a href="">Портфоліо</a>
           <a href="">Контакти</a>
         </ul>
-        <p>info@devstudio.com</p>
-        <p>+38 096 111 11 11</p>
-      </header>
-      <main>
+        <p class="email">info@devstudio.com</p>
+        <p class="phone">+38 096 111 11 11</p>
+    </header>
+    <main>
         <div>
             <button>Усі</button>
             <button>Веб-сайти</button>
@@ -73,12 +75,12 @@
                 </li>
             </ul>
         </div>
-      </main>
-      <footer>
+    </main>
+    <footer>
         <a href="#">WebStudio</a>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <p>info@devstudio.com</p>
         <p>+38 096 111 11 11</p>
-      </footer>
+    </footer>
 </body>
 </html>
