--- a/index.html
+++ b/index.html
@@ -7,77 +7,77 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <header>
-        <a href="">Web</a>
-        <a href="">Studio</a>
-        <ul>
-          <a href="">Студія</a>
-          <a href="">Портфоліо</a>
-          <a href="">Контакти</a>
+    <header class="header-navigation">
+        <a href="" class="logo">Web</a>
+        <a href="" class="logo-2part">Studio</a>
+        <ul class="header-list">
+          <li class="header-item"><a href="">Студія</a></li>
+          <li class="header-item"><a href="">Портфоліо</a></li>
+          <li class="header-item"><a href="">Контакти</a></li>
         </ul>
-        <p class="email">info@devstudio.com</p>
-        <p class="phone">+38 096 111 11 11</p>
+        <p class="email" class="header-info">info@devstudio.com</p>
+        <p class="phone" class="header-info">+38 096 111 11 11</p>
     </header>
-    <main>
-        <div>
+    <main class="main-information">
+        <div class="main-button">
             <button>Усі</button>
             <button>Веб-сайти</button>
             <button>Додатки</button>
             <button>Дизайн</button>
             <button>Маркетинг</button>
         </div>
-        <div>
-            <ul>
-                <li>
-                    <img src="./img/technokr.png" alt="">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
+        <div class="main-photos">
+            <ul class="webstudio-list">
+                <li class="webstudio-item">
+                    <img src="./img/technokr.png" class="webstudio-photo">
+                    <h3 class="webstudio-name">Технокряк</h3>
+                    <p class="webstudio-text">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="./img/neworleans.png" alt="">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                <li class="webstudio-item">
+                    <img src="./img/neworleans.png" class="webstudio-photo" alt="">
+                    <h3 class="webstudio-name">Постер New Orlean vs Golden Star</h3>
+                    <p class="webstudio-text">Дизайн</p>
                 </li>
-                <li>
-                    <img src="./img/seafood.png" alt="">
-                    <h3>Ресторан Seafood</h3>
-                    <p>Додаток</p>
+                <li class="webstudio-item">
+                    <img src="./img/seafood.png" class="webstudio-photo" alt="">
+                    <h3 class="webstudio-name">Ресторан Seafood</h3>
+                    <p class="webstudio-text">Додаток</p>
                 </li>
-                <li>
-                    <img src="./img/prime.png" alt="">
-                    <h3>Проєкт Prime</h3>
-                    <p>Маркетинг</p>
+                <li class="webstudio-item">
+                    <img src="./img/prime.png" class="webstudio-photo" alt="">
+                    <h3 class="webstudio-name">Проєкт Prime</h3>
+                    <p class="webstudio-text">Маркетинг</p>
                 </li>
-                <li>
-                    <img src="./img/boxes.png" alt="">
-                    <h3>Проєкт Boxes</h3>
-                    <p>Додаток</p>
+                <li class="webstudio-item">
+                    <img src="./img/boxes.png" class="webstudio-photo" alt="">
+                    <h3 class="webstudio-name">Проєкт Boxes</h3>
+                    <p class="webstudio-text">Додаток</p>
                 </li>
-                <li>
-                    <img src="./img/inspiration.png" alt="">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                <li class="webstudio-item">
+                    <img src="./img/inspiration.png" class="webstudio-photo" alt="">
+                    <h3 class="webstudio-name">Inspiration has no Borders</h3>
+                    <p class="webstudio-text">Веб-сайт</p>
                 </li>
-                <li>
-                    <img src="./img/limited.png" alt="">
-                    <h3>Видання Limited Edition</h3>
-                    <p>Дизайн</p>
+                <li class="webstudio-item">
+                    <img src="./img/limited.png" class="webstudio-photo" alt="">
+                    <h3 class="webstudio-name">Видання Limited Edition</h3>
+                    <p class="webstudio-text">Дизайн</p>
                 </li>
-                <li>
-                    <img src="./img/lab.png" alt="">
-                    <h3>Проєкт LAB</h3>
-                    <p>Маркетинг</p>
+                <li class="webstudio-item">
+                    <img src="./img/lab.png" class="webstudio-photo" alt="">
+                    <h3 class="webstudio-name">Проєкт LAB</h3>
+                    <p class="webstudio-text">Маркетинг</p>
                 </li>
-                <li>
-                    <img src="./img/growingbusiness.png" alt="">
-                    <h3>Growing Business</h3>
-                    <p>Додаток</p>
+                <li class="webstudio-item"> 
+                    <img src="./img/growingbusiness.png" class="webstudio-photo" alt="">
+                    <h3 class="webstudio-name">Growing Business</h3>
+                    <p class="webstudio-text">Додаток</p>
                 </li>
             </ul>
         </div>
     </main>
-    <footer>
-        <a href="#">WebStudio</a>
+    <footer class="footer-navigation">
+        <a href="#" class="">WebStudio</a>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
         <p>info@devstudio.com</p>
         <p>+38 096 111 11 11</p>
