--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         </div>
     </main>
     <footer class="footer-navigation">
-        <a href="#" class="">WebStudio</a>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <p>info@devstudio.com</p>
-        <p>+38 096 111 11 11</p>
+        <a href="#" class="footer-logo">WebStudio</a>
+        <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
+        <p class="footer-email">info@devstudio.com</p>
+        <p class="footer-number">+38 096 111 11 11</p>
     </footer>
 </body>
 </html>
