--- a/index.html
+++ b/index.html
@@ -11,23 +11,27 @@
 </head>
 <body>
     <header class="header-navigation">
-        <a href="" class="logo">Web</a>
-        <a href="" class="logo-2part">Studio</a>
-        <ul class="header-list">
-          <li class="header-item"><a href="">Студія</a></li>
-          <li class="header-item"><a href="">Портфоліо</a></li>
-          <li class="header-item"><a href="">Контакти</a></li>
-        </ul>
-        <p class="email" class="header-info">info@devstudio.com</p>
-        <p class="phone" class="header-info">+38 096 111 11 11</p>
+        <nav>
+            <a href="./index.html" class="logo">
+                <span class="logo-web-2">Web</span>
+                <span class="logo-studio-2">Studio</span>
+              </a>
+            <ul class="header-list">
+              <li class="header-item"><a href="">Студія</a></li>
+              <li class="header-item"><a href="">Портфоліо</a></li>
+              <li class="header-item"><a href="">Контакти</a></li>
+            </ul>
+            <p class="header-email-2">info@devstudio.com</p>
+            <p class="header-phone-2">+38 096 111 11 11</p>
+        </nav>
     </header>
     <main class="main-information">
         <div class="main-button">
-            <button>Усі</button>
-            <button>Веб-сайти</button>
-            <button>Додатки</button>
-            <button>Дизайн</button>
-            <button>Маркетинг</button>
+            <button class="button">Усі</button>
+            <button class="button">Веб-сайти</button>
+            <button class="button">Додатки</button>
+            <button class="button">Дизайн</button>
+            <button class="button">Маркетинг</button>
         </div>
         <div class="main-photos">
             <ul class="webstudio-list">
@@ -80,10 +84,15 @@
         </div>
     </main>
     <footer class="footer-navigation">
-        <a href="#" class="footer-logo">WebStudio</a>
-        <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
-        <p class="footer-email">info@devstudio.com</p>
-        <p class="footer-number">+38 096 111 11 11</p>
+        <div class="footer-wrapper">
+        <a href="./index.html" class="logo">
+            <span class="logo-web">Web</span>
+            <span class="logo-studio logo-studio-footer">Studio</span>
+          </a>
+          <p class="footer-adress">м. Київ, пр-т Лесі Українки, 26</p>
+          <p class="footer-email">info@devstudio.com</p>
+          <p class="footer-number">+38 096 111 11 11</p>
+        </div>
     </footer>
 </body>
 </html>
