--- a/index.html
+++ b/index.html
@@ -36,47 +36,47 @@
         <div class="main-photos">
             <ul class="webstudio-list">
                 <li class="webstudio-item">
-                    <img src="./img/technokr.png" class="webstudio-photo">
+                    <img src="./img/technokr.jpg" class="webstudio-photo">
                     <h3 class="webstudio-name">Технокряк</h3>
                     <p class="webstudio-text">Веб-сайт</p>
                 </li>
                 <li class="webstudio-item">
-                    <img src="./img/neworleans.png" class="webstudio-photo" alt="">
+                    <img src="./img/neworleans.jpg" class="webstudio-photo" alt="">
                     <h3 class="webstudio-name">Постер New Orlean vs Golden Star</h3>
                     <p class="webstudio-text">Дизайн</p>
                 </li>
                 <li class="webstudio-item">
-                    <img src="./img/seafood.png" class="webstudio-photo" alt="">
+                    <img src="./img/seafood.jpg" class="webstudio-photo" alt="">
                     <h3 class="webstudio-name">Ресторан Seafood</h3>
                     <p class="webstudio-text">Додаток</p>
                 </li>
                 <li class="webstudio-item">
-                    <img src="./img/prime.png" class="webstudio-photo" alt="">
+                    <img src="./img/prime.jpg" class="webstudio-photo" alt="">
                     <h3 class="webstudio-name">Проєкт Prime</h3>
                     <p class="webstudio-text">Маркетинг</p>
                 </li>
                 <li class="webstudio-item">
-                    <img src="./img/boxes.png" class="webstudio-photo" alt="">
+                    <img src="./img/boxes.jpg" class="webstudio-photo" alt="">
                     <h3 class="webstudio-name">Проєкт Boxes</h3>
                     <p class="webstudio-text">Додаток</p>
                 </li>
                 <li class="webstudio-item">
-                    <img src="./img/inspiration.png" class="webstudio-photo" alt="">
+                    <img src="./img/inspiration.jpg" class="webstudio-photo" alt="">
                     <h3 class="webstudio-name">Inspiration has no Borders</h3>
                     <p class="webstudio-text">Веб-сайт</p>
                 </li>
                 <li class="webstudio-item">
-                    <img src="./img/limited.png" class="webstudio-photo" alt="">
+                    <img src="./img/limited.jpg" class="webstudio-photo" alt="">
                     <h3 class="webstudio-name">Видання Limited Edition</h3>
                     <p class="webstudio-text">Дизайн</p>
                 </li>
                 <li class="webstudio-item">
-                    <img src="./img/lab.png" class="webstudio-photo" alt="">
+                    <img src="./img/lab.jpg" class="webstudio-photo" alt="">
                     <h3 class="webstudio-name">Проєкт LAB</h3>
                     <p class="webstudio-text">Маркетинг</p>
                 </li>
                 <li class="webstudio-item"> 
-                    <img src="./img/growingbusiness.png" class="webstudio-photo" alt="">
+                    <img src="./img/growingbusiness.jpg" class="webstudio-photo" alt="">
                     <h3 class="webstudio-name">Growing Business</h3>
                     <p class="webstudio-text">Додаток</p>
                 </li>
